deployment/Kubernetes/overlays/ou/production/rap/rap-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rap-ingress
spec:
  tls:
    - hosts:
        - rap.cs.ou.nl
  rules:
    - host: rap.cs.ou.nl
